--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.10.2",
     "mysql2": "^2.0.0",
     "nodemon": "^1.19.4",
+    "stringify-object": "^3.3.0",
     "util": "^0.12.1"
   }
 }
