--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "training",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,5 +27,15 @@
     "nodemon": "^1.19.4",
     "stringify-object": "^3.3.0",
     "util": "^0.12.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hein21-bot/EverComm_Survey_API.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Hein21-bot/EverComm_Survey_API/issues"
+  },
+  "homepage": "https://github.com/Hein21-bot/EverComm_Survey_API#readme",
+  "description": ""
 }
